yaml/k8s-3-Networking/1-network-policy/03-web-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: networking
  labels:
    name: web
spec:
  containers:
  - name: web
    image: nginx
    imagePullPolicy: IfNotPresent
