yaml/k8s-3-Networking/1-network-policy/11-hello-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: hello-pod
  namespace: networking
  labels:
    app: hello
    zone: prod
    version: v1
spec:
  containers:
  - name: hello-cntr
    image: metamagicglobal/hello:v1.0
    imagePullPolicy: IfNotPresent
    ports:
     - containerPort: 80
