yaml/k8s-3-Networking/1-network-policy/06-prod-ntw-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prod
  namespace: networking
spec:
  selector: 
    zone: prod
  ports:
  - protocol: TCP
    targetPort: 80
    port: 80
    name: http
