yaml/k8s-3-Networking/1-network-policy/21-web-allow-prod.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-prod
  namespace: networking
spec:
  podSelector:
    matchLabels:
      name: web
  ingress:
  - from:
    - podSelector:
        matchLabels:
          zone: prod
