yaml/k8s-3-Networking/1-network-policy/24-allowall-ns.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-svc-networking
  namespace: networking
spec:
  podSelector:
    matchLabels:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: production

## note: kubectl label namespace/policy-demo purpose=production
